--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ footer {
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164300.JPG" alt="we goes to trinadrum">
-      <p>Shots of everyone from our trip to Thiruvananthapuram.</p>
+      <p>Shots taken from our trip to Thiruvananthapuram.</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164352.JPG" alt="">
