--- a/index.html
+++ b/index.html
@@ -162,14 +162,15 @@ footer {
    
     <div class="gallery-item">
       <img src="IMG_20250405_164545.JPG" alt="end of the academic year 2024-25">
-      <p>At the end of the first academic year of 2024-25, our mahal 'attur' takes us on a journey with new clothes (PHOTO).</p>
+      <p>At the end of the first academic year of 2024-25, the country welcomes us with new clothes (PHOTO).</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164619.JPG" alt="">
-      <p>At the end of the first academic year of 2024-25, our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
+      <p>At the end of the first academic year of 2024-25, the country welcomes us with new clothes (PHOTO 2).</p>
     </div>
     <div class="gallery-item">
       <img src="IMG-20250215-WA0008.jpg" alt="end of the academic year 2024-25">
+      <img src="IMG-20250214-WA0001.jpg" alt="end of the academic year 2024-25">
       <p>Students of the year 2024-25.</p>
     </div>
     <div class="gallery-item">
@@ -182,17 +183,17 @@ footer {
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164300.JPG" alt="we goes to trinadrum">
-      <p>Shots taken from our trip to Thiruvananthapuram.</p>
+      <p>Pictures of everyone from our trip to Thiruvananthapuram.</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164352.JPG" alt="">
-      <p>Shots taken from our trip to Thiruvananthapuram.</p>
+      <p>Pictures taken from our trip to Thiruvananthapuram.</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164215.JPG" alt="Victory">
       <p>Those who got first, second and third positions in the semi-annual examination 
-        1st place: Hijaz, Sinan.kk
-        2nd place:,Afnal.A 
+        1st place: Hijaz 
+        2nd place: Sinan.kk ,Afnal.A 
         3rd place: Shamnad.A ,Ameen.K.</p>
     </div>
     <div class="gallery-item">
@@ -205,7 +206,7 @@ footer {
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_165806.JPG" alt="first year examination">
-      <p>Students who achieved high success in the 2024-25 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
+      <p>Students who achieved high success in the 2020 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
     </div>
   </section>  <div class="instagram-link">
     <a href="https://www.instagram.com/nahjul_huda_dars_attur?igsh=YjV2ZDRlbTI1djV2this" target="_blank" aria-label="Instagram">
