--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer {
   </header>  <section class="description">
     <h2>About Us</h2>
     <p>
-      Nahjul Huda Dars is a dedicated Islamic organization focused on spreading the teachings of the Quran and Sunnah.
+      Nahjul Huda Dars is a dedicated Islamic institution focused on spreading the teachings of the Quran and Sunnah.
       Our mission is to inspire hearts with wisdom, educate minds with knowledge, and build a community rooted in faith and unity.
     </p>
   </section>  <section class="gallery">
