--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ footer {
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164619.JPG" alt="">
-      <p>At the end of the first academic year of 2024-25, the country welcomes us with new clothes (PHOTO 2).</p>
+      <p>At the end of the first academic year of 2024-25, Our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
     </div>
     <div class="gallery-item">
       <img src="IMG-20250215-WA0008.jpg" alt="end of the academic year 2024-25">
@@ -183,11 +183,11 @@ footer {
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164300.JPG" alt="we goes to trinadrum">
-      <p>Pictures of everyone from our trip to Thiruvananthapuram.</p>
+      <p>shots taken from our trip to Thiruvananthapuram.</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164352.JPG" alt="">
-      <p>Pictures taken from our trip to Thiruvananthapuram.</p>
+      <p>shots taken from our trip to Thiruvananthapuram.</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164215.JPG" alt="Victory">
@@ -206,7 +206,7 @@ footer {
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_165806.JPG" alt="first year examination">
-      <p>Students who achieved high success in the 2020 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
+      <p>Students who achieved high success in the 2024-25 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
     </div>
   </section>  <div class="instagram-link">
     <a href="https://www.instagram.com/nahjul_huda_dars_attur?igsh=YjV2ZDRlbTI1djV2this" target="_blank" aria-label="Instagram">
