--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@ footer {
    
     <div class="gallery-item">
       <img src="IMG_20250405_164545.JPG" alt="end of the academic year 2024-25">
-      <p>At the end of the first academic year of 2024-25, the country welcomes us with new clothes (PHOTO).</p>
+      <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 1).</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250405_164619.JPG" alt="">
-      <p>At the end of the first academic year of 2024-25, Our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
+      <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
     </div>
     <div class="gallery-item">
       <img src="IMG-20250215-WA0008.jpg" alt="end of the academic year 2024-25">
@@ -192,9 +192,9 @@ footer {
     <div class="gallery-item">
       <img src="IMG_20250405_164215.JPG" alt="Victory">
       <p>Those who got first, second and third positions in the semi-annual examination 
-        1st place: Hijaz 
-        2nd place: Sinan.kk ,Afnal.A 
-        3rd place: Shamnad.A ,Ameen.K.</p>
+        1st place: Hijaz.c, Sinan.kk , 
+        2nd place: Afnan.A , 
+        3rd place: Shamnad.A , Ameen.K.</p>
     </div>
     <div class="gallery-item">
       <img src="IMG_20250404_155400.JPG" alt="The gift was given">
