--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ footer {
 </head>
 <body>
   <div id="welcome-popup">WELCOME TO NAHJUL HUDA DARS</div>  <header>
-    <img src="470894940_1009344907667012_3220201858872715732_n.jpg" alt="Logo" class="logo">
-    <h1>NAHJUL HUDA DARS</h1>
+    <img src="c:\Users\ALI\Downloads\WEB LOGO.jpg" alt="Logo" class="logo">
+    <h1>NAHJUL HUDA DARS, ATTUR</h1>
   </header>  <section class="description">
     <h2>About Us</h2>
     <p>
