--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ footer {
 </head>
 <body>
   <div id="welcome-popup">WELCOME TO NAHJUL HUDA DARS</div>  <header>
-    <img src="c:\Users\ALI\Downloads\WEB LOGO.jpg" alt="Logo" class="logo">
+    <img src="web logo 2.jpg" alt="Logo" class="logo">
     <h1>NAHJUL HUDA DARS, ATTUR</h1>
   </header>  <section class="description">
     <h2>About Us</h2>
