--- a/index.html
+++ b/index.html
@@ -1,109 +1,95 @@
-
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAHJUL HUDA DARS</title>
   <style>
     body {
-      margin: 0;
+      margin: 20;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, rgb(198, 160, 241), #e5b9ff, #d275fd, #531355, #550047);
-      color: white;
+      background: linear-gradient(135deg, hsla(261, 100%, 50%, 0.384), #000000, #f5f5f57a);
+      color: rgb(0, 0, 0);
       overflow-x: hidden;
-    }#welcome-popup {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.85);
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  z-index: 9999;
-  animation: fadeIn 2s;
-}
-header {
+    }
+
+    header {
       text-align: center;
-      text-size-adjust: 70px;
-      text-shadow: black;
       padding: 2rem 1rem;
       animation: fadeInDown 2s ease-in-out;
     }
 
     header h1 {
-      color: black; /* Set the color of the heading to black */
+      color: rgb(255, 255, 255);
     }
 
-header {
-  text-align: center;
-  text-size-adjust: 50PX;
-  text-shadow: black;
-  padding: 2rem 1rem;
-  animation: fadeInDown 2s ease-in-out;
-}
+    .logo {
+      width: 100px;
+      border-radius: 100px;
+    }
 
-.logo {
-  width: 100px;
-  border-radius: 100px;
-}
+    .description {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: rgb(255, 255, 255);
+      border-radius: 30px;
+      animation: fadeIn 3s ease-in-out;
+    }
 
-.description {
-  max-width: 800px;
-  margin: 2rem auto;
-  padding: 1rem;
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 20px;
-  animation: fadeIn 3s ease-in-out;
-}
+      .gallery-box {
+      max-width: 1200px;
+      margin: 4rem auto;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.151);
+      border: 2px solid rgb(255, 255, 255);
+      border-radius: 15px;
+      box-shadow: 0 0 90px rgb(89, 0, 255);
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 1s ease-out, transform 1s ease-out;
+    }
 
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1.5rem;
-  padding: 2rem;
-  animation: zoomIn 2s ease-in-out;
-}
+    .gallery-box.visible {
+      opacity: 10000;
+      transform: translateY(0);
+    }
 
-.gallery-item {
-  text-align: center;
-  background: rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
-  padding: 1rem;
-  transition: transform 0.3s ease;
-}
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1.5rem;
+    }
 
-.gallery-item:hover {
-  transform: scale(1.05);
-}
+    .gallery-item {
+      background: rgb(255, 255, 255);
+      border-radius: 16px;
+      text-align: center;
+      padding: 1rem;
+      transition: transform 0.3s ease;
+    }
+    .gallery-item:hover {
+      transform: scale(1.05);
+    }
 
-.gallery-item img {
-  width: 100%;
-  border-radius: 10px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-}
+    .gallery-item img {
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(76, 0, 255, 0.863);
+    }
+    .gallery-item p {
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+    }
 
-.gallery-item p {
-  margin-top: 0.5rem;
-  font-size: 0.9rem;
-}
-
- /* Social Media Links */
- .social-links {
+    .social-links {
       text-align: center;
       margin-top: 2rem;
     }
-
     .social-links a {
       margin: 0 1rem;
       transition: transform 0.3s ease;
     }
-
-    .social-links a:hover {
-      transform: scale(1.2);
-    }
-
     .social-links svg {
       width: 40px;
       height: 40px;
@@ -111,163 +97,155 @@ header {
       transition: transform 0.5s ease, fill 0.5s ease;
       animation: bounce 2s infinite;
     }
-
     .social-links svg:hover {
       transform: scale(1.3);
-      fill: #ffbb00;
+      fill: #4c00ff;
     }
 
-footer {
-  text-align: center;
-  padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.2);
-  font-size: 0.9rem;
-  margin-top: 2rem;
-  animation: fadeInUp 2s ease-in-out;
-}
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgb(255, 255, 255);
+      font-size: 1rem;
+      margin-top: 2rem;
+      animation: fadeInUp 2s ease-in-out;
+    }
 
-.popup {
-  position: absolute;
-  pointer-events: none;
-  background: rgba(0,0,0,0.7);
-  padding: 10px;
-  border-radius: 8px;
-  color: white;
-  font-size: 14px;
-  transform: scale(0);
-  transition: transform 0.2s ease;
-}
-
-@keyframes fadeInDown {
-  from { opacity: 0; transform: translateY(-50px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-@keyframes fadeInUp {
-  from { opacity: 0; transform: translateY(50px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes zoomIn {
-  from { transform: scale(0.8); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
-}
-
-@keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
-}
-
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
   </style>
 </head>
 <body>
-    <header>
-    <img src="lopgo web.jpg" alt="Logo" class="logo">
+
+  <header>
+    <img src="HYU.jpg" alt="Logo" class="logo">
     <h1>NAHJUL HUDA DARS, ATTUR</h1>
-  </header>  <section class="description">
+  </header>
+
+  <section class="description">
     <h2>About Us</h2>
     <p>
       Nahjul Huda Dars is a dedicated Islamic institution focused on spreading
-       the messages and teachings of the Quran and Sunnah through the paths of Samastha Kerala Jem-iyyathul Ulama. Our mission is to inspire hearts with wisdom and educate minds with moral values, and build a perfect person and community rooted in faith and unity
+      the messages and teachings of the Quran and Sunnah through the paths of Samastha Kerala Jem-iyyathul Ulama.
     </p>
-  </section>  <section class="gallery">
-    
-    
-   
-    <div class="gallery-item">
-      <img src="WhatsApp Image 2025-06-04 at 09.05.46_a43ead27.jpg" alt="We Published news papper">
-      <p>NUJOOMUL WAFA STUDENTS ASSOCIATION ൻ്റെ കീഴിൽ പുറത്തിറക്കിയ പ്രഥമ പത്രമായ "വിഭാതം" പ്രകാശനകർമ്മം നിർവഹിക്കുന്നു.
-      </p>
+  </section>
+
+  <!-- ⭐ Main Gallery -->
+  <section class="gallery-box" id="galleryBox">
+    <div class="gallery">
+      <div class="gallery-item">
+        <img src="WhatsApp Image 2025-06-04 at 09.05.46_a43ead27.jpg" alt="">
+        <p>NUJOOMUL WAFA STUDENTS ASSOCIATION ൻ്റെ കീഴിൽ പുറത്തിറക്കിയ പ്രഥമ പത്രമായ "വിഭാതം" പ്രകാശനകർമ്മം നിർവഹിക്കുന്നു.
+        </p>
+      </div>
+      <div class="gallery-item">
+        <img src="ssdsf.jpg" alt="">
+        <p>On the occasion of Eid-ul-Adha, we are giving new clothes to the relatives of our Attur Mahal.
+        </p>
+      </div>
+      <div class="gallery-item">
+        <img src="ssw.jpg" alt="">
+        <p>Prizes are being distributed to those who won first, second and third places in speech and singing from the junior and senior categories at the Mihrajanul Funoon Mini Fest. Congratulations to the winners.</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250519_211849.JPG" alt="">
+        <p>First, second and third place winners in speech and singing from junior and senior categories in mihrajanul funoon mini fest. Congratulations to the winners.</p>
+      </div>
+      <div class="gallery-item">
+        <img src="SHAMNAD.A_20250519_211306_0000.jpg" alt="">
+        <p>Our 2025‑26 Committee Members</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250405_164545.JPG" alt="">
+        <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 1).</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250405_164619.JPG" alt="">
+        <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG-20250215-WA0008.jpg" alt="">
+        <p>Students of the year 2024‑25.</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG-20250211-WA0002.jpg" alt="">
+        <p>Our 2024‑25 Committee Members</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250404_155330.JPG" alt="">
+        <p>We have released a book containing rules for Ramadan.</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250405_164300.JPG" alt="">
+        <p>shots taken from our trip to Thiruvananthapuram.(2)</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250405_164352.JPG" alt="">
+        <p>shots taken from our trip to Thiruvananthapuram.(2)</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250405_164215.JPG" alt="">
+        <p>Those who got first, second and third positions in the semi-annual examination 
+          1st place: Hijaz.c, Sinan.kk , 
+          2nd place: Afnan.A , 
+          3rd place: Shamnad.A , Ameen.K.</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250404_155400.JPG" alt="">
+        <p>Winners of the competition held as part of the Prophet's Day program</p>
+      </div>
+      <div class="gallery-item">
+        <img src="471492595_618376020619337_1268800198924982292_n.jpeg.jpg" alt="">
+        <p>We won second place in the range-level competition.</p>
+      </div>
+      <div class="gallery-item">
+        <img src="IMG_20250405_165806.JPG" alt="">
+        <p>Students who achieved high success in the 2024-25 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
+      </div>
     </div>
-    <div class="gallery-item">
-      <img src="ssdsf.jpg" alt="We Published news papper">
-      <p>On the occasion of Eid-ul-Adha, we are giving new clothes to the relatives of our Attur Mahal.
-      </p>
-    </div>
-    <div class="gallery-item">
-      <img src="ssw.jpg" alt="We has commetty">
-      <p>Prizes are being distributed to those who won first, second and third places in speech and singing from the junior and senior categories at the Mihrajanul Funoon Mini Fest. Congratulations to the winners.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250519_211849.JPG" alt="We has commetty">
-      <p>First, second and third place winners in speech and singing from junior and senior categories in mihrajanul funoon mini fest. Congratulations to the winners.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="SHAMNAD.A_20250519_211306_0000.jpg" alt="We has commetty">
-      <p>Our 2025-26 Committee Members</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250405_164545.JPG" alt="end of the academic year 2024-25">
-      <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 1).</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250405_164619.JPG" alt="">
-      <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG-20250215-WA0008.jpg" alt="end of the academic year 2024-25">
-      <img src="IMG-20250214-WA0001.jpg" alt="end of the academic year 2024-25">
-      <p>Students of the year 2024-25.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG-20250211-WA0002.jpg" alt="We has commetty">
-      <p>Our 2024-25 Committee Members</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250404_155330.JPG" alt="Published ramadan based book">
-      <p>We have released a book containing rules for Ramadan.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250405_164300.JPG" alt="we goes to trinadrum">
-      <p>shots taken from our trip to Thiruvananthapuram.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250405_164352.JPG" alt="">
-      <p>shots taken from our trip to Thiruvananthapuram.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250405_164215.JPG" alt="Victory">
-      <p>Those who got first, second and third positions in the semi-annual examination 
-        1st place: Hijaz.c, Sinan.kk , 
-        2nd place: Afnan.A , 
-        3rd place: Shamnad.A , Ameen.K.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250404_155400.JPG" alt="The gift was given">
-      <p>Winners of the competition held as part of the Prophet's Day program</p>
-    </div>
-    <div class="gallery-item">
-      <img src="471492595_618376020619337_1268800198924982292_n.jpeg.jpg" alt="Victory">
-      <p>We won second place in the range-level competition.</p>
-    </div>
-    <div class="gallery-item">
-      <img src="IMG_20250405_165806.JPG" alt="first year examination">
-      <p>Students who achieved high success in the 2024-25 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
-    </div>
-  </section> 
+  </section>
+
+  <!-- Social Links -->
   <div class="social-links">
-    <!-- Instagram Link -->
-    <a href="https://www.instagram.com/nahjul_huda_dars_attur?igsh=MXY1cXJocWtsYm94aQ==" target="_blank" aria-label="Instagram">
+     <a href="https://www.instagram.com/nahjul_huda_dars_attur?igsh=MXY1cXJocWtsYm94aQ==" target="_blank" aria-label="Instagram">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" viewBox="0 0 448 512">
         <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8z"/>
       </svg>
     </a>
-
-    <!-- Facebook Link -->
     <a href="https://www.facebook.com/your_facebook" target="_blank" aria-label="Facebook">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-        <path d="M279.14 288l14.22-92H185v-60c0-26.34 12.7-52 56.57-52h43.4v-87.35a618.57 618.57 0 0 0-61.33-3.08c-74.15 0-123.12 45.51-123.12 124.06v63.97h-82.9v92h82.9v221h102.4V288z"/>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M279.14 288l14.22-92H185v-60c0-26.3 12.7-52 56.6-52h43.4V0h-61.3C141.1 0 104 36.2 104 104v60H40v92h64v221h102.4V288z"/></svg>
     </a>
   </div>
-    <footer>
+
+  <footer>
     NAHJUL HUDA DARS – Reserved all thoughts
-  </footer>  
-   
-  </script></body>
+  </footer>
+
+  <script>
+    const galleryBox = document.getElementById('galleryBox');
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.3 });
+    observer.observe(galleryBox);
+  </script>
+</body>
 </html>
