--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="file_00000000a1f461f8937f3c6ee8d78b43.png" type="png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAHJUL HUDA DARS</title>
@@ -56,9 +57,11 @@
     }
 
     .gallery {
-      display: grid;
-      grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
+        display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem;
+  animation: zoomIn 2s ease-in-out;
+
     }
 
     .gallery-item {
@@ -144,72 +147,72 @@
   <section class="gallery-box" id="galleryBox">
     <div class="gallery">
       <div class="gallery-item">
-        <img src="WhatsApp Image 2025-06-04 at 09.05.46_a43ead27.jpg" alt="">
+        <img src="WhatsApp Image 2025-06-04 at 09.05.46_a43ead27.jpg" alt="image">
         <p>NUJOOMUL WAFA STUDENTS ASSOCIATION ൻ്റെ കീഴിൽ പുറത്തിറക്കിയ പ്രഥമ പത്രമായ "വിഭാതം" പ്രകാശനകർമ്മം നിർവഹിക്കുന്നു.
         </p>
       </div>
       <div class="gallery-item">
-        <img src="ssdsf.jpg" alt="">
+        <img src="ssdsf.jpg" alt="image">
         <p>On the occasion of Eid-ul-Adha, we are giving new clothes to the relatives of our Attur Mahal.
         </p>
       </div>
       <div class="gallery-item">
-        <img src="ssw.jpg" alt="">
+        <img src="ssw.jpg" alt="image">
         <p>Prizes are being distributed to those who won first, second and third places in speech and singing from the junior and senior categories at the Mihrajanul Funoon Mini Fest. Congratulations to the winners.</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250519_211849.JPG" alt="">
+        <img src="IMG_20250519_211849.JPG" alt="image">
         <p>First, second and third place winners in speech and singing from junior and senior categories in mihrajanul funoon mini fest. Congratulations to the winners.</p>
       </div>
       <div class="gallery-item">
-        <img src="SHAMNAD.A_20250519_211306_0000.jpg" alt="">
+        <img src="SHAMNAD.A_20250519_211306_0000.jpg" alt="image">
         <p>Our 2025‑26 Committee Members</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250405_164545.JPG" alt="">
+        <img src="IMG_20250405_164545.JPG" alt="image">
         <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 1).</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250405_164619.JPG" alt="">
+        <img src="IMG_20250405_164619.JPG" alt="image">
         <p>At the end of the first academic year (2024-25), Our mahal 'attur' takes us on a journey with new clothes (PHOTO 2).</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG-20250215-WA0008.jpg" alt="">
+        <img src="IMG-20250215-WA0008.jpg" alt="image">
         <p>Students of the year 2024‑25.</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG-20250211-WA0002.jpg" alt="">
+        <img src="IMG-20250211-WA0002.jpg" alt="image">
         <p>Our 2024‑25 Committee Members</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250404_155330.JPG" alt="">
+        <img src="IMG_20250404_155330.JPG" alt="image">
         <p>We have released a book containing rules for Ramadan.</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250405_164300.JPG" alt="">
+        <img src="IMG_20250405_164300.JPG" alt="image">
         <p>shots taken from our trip to Thiruvananthapuram.(2)</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250405_164352.JPG" alt="">
+        <img src="IMG_20250405_164352.JPG" alt="image">
         <p>shots taken from our trip to Thiruvananthapuram.(2)</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250405_164215.JPG" alt="">
+        <img src="IMG_20250405_164215.JPG" alt="image">
         <p>Those who got first, second and third positions in the semi-annual examination 
           1st place: Hijaz.c, Sinan.kk , 
           2nd place: Afnan.A , 
           3rd place: Shamnad.A , Ameen.K.</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250404_155400.JPG" alt="">
+        <img src="IMG_20250404_155400.JPG" alt="image">
         <p>Winners of the competition held as part of the Prophet's Day program</p>
       </div>
       <div class="gallery-item">
-        <img src="471492595_618376020619337_1268800198924982292_n.jpeg.jpg" alt="">
+        <img src="471492595_618376020619337_1268800198924982292_n.jpeg.jpg" alt="image">
         <p>We won second place in the range-level competition.</p>
       </div>
       <div class="gallery-item">
-        <img src="IMG_20250405_165806.JPG" alt="">
+        <img src="IMG_20250405_165806.JPG" alt="image">
         <p>Students who achieved high success in the 2024-25 Quarterly Examination 1st Place: Hijaz C,2nd Place:Shamil 3rd Place:Afnan.A.</p>
       </div>
     </div>
