--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
       border-radius: 30px;
       box-shadow: 0 0 90px rgb(25, 0, 255);
       opacity: 0;
-      animation-timing-function: ease;
-      transform: translateY(20px);
-      transition: opacity 1s ease-out, transform 1s ease-out;
+
     }
 
     .gallery-box.visible {
@@ -274,4 +272,4 @@ footer {
     observer.observe(galleryBox);
   </script>
 </body>
-</html>v
+</html>
