--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       opacity: 1;
       transform: translateY(0);
     }
+    .visible {
+      
+      <body onload="document.getElementById('galleryBox').classList.add('visible')">
+    }
 
     .gallery {
   display: grid;
