--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="file_00000000a1f461f8937f3c6ee8d78b43.png" type="image/png">
+  <link rel="icon" type="image/png" href="/https://ameen8156.github.io/NAHJUL-HUDA-DARS-/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/https://ameen8156.github.io/NAHJUL-HUDA-DARS-/favicon.svg" />
+<link rel="shortcut icon" href="/https://ameen8156.github.io/NAHJUL-HUDA-DARS-/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/https://ameen8156.github.io/NAHJUL-HUDA-DARS-/apple-touch-icon.png" />
+<link rel="manifest" href="/https://ameen8156.github.io/NAHJUL-HUDA-DARS-/site.webmanifest" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAHJUL HUDA DARS</title>
